test/conformance/chainsaw/reports/background/validating-admission-policy-exclude/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validating-admission-policy-fail
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: deployment.yaml
    - assert:
        file: deployment-assert.yaml
  - name: step-02
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy.yaml
  - name: step-03
    try:
    - sleep:
        duration: 10s
  - name: step-04
    try:
    - script:
        content: |
          POLR_COUNT=$(kubectl get policyreports --namespace=default --no-headers 2>/dev/null | wc -l)
          if [ "$POLR_COUNT" -gt 0 ]; then
            echo "ERROR: Policy reports exists when it shouldn't!"
            exit 1
          else
            echo "SUCCESS: Policy reports not generated as expected"
            exit 0
          fi
